# mcp-parallax

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  design-reviewer.md
.claude/commands/: validate.md
.claude/skills/speckit-analyze/: SKILL.md
.claude/skills/speckit-checklist/: SKILL.md
.claude/skills/speckit-clarify/: SKILL.md
.claude/skills/speckit-constitution/: SKILL.md
.claude/skills/speckit-git-remote/: SKILL.md
.claude/skills/speckit-git-validate/: SKILL.md
.claude/skills/speckit-implement/: SKILL.md
.claude/skills/speckit-plan/: SKILL.md
.claude/skills/speckit-specify/: SKILL.md
.claude/skills/speckit-tasks/: SKILL.md
.claude/skills/speckit-taskstoissues/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  security.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/extensions/git/: README.md
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
.specify/workflows/: workflow-registry.json
claudedocs/experiments/decide-order-bias/: analysis.md  analysis.py  analysis_ext.py  design.md  fixtures-ext.json  fixtures.json  results-ext.jsonl  results.jsonl  runner.py
docs/design/: CORRECTIVE_SELECTION.md  MEMORY_LAYER.md  NEW_SERVER_DESIGN.md  PREFERENCE_ELICITATION.md  RESEARCH_PRIMITIVE.md  SDK_LANDSCAPE.md  SDK_USAGE_CORE.md  WATCHDOG_LAYER.md
examples/: acceptance.rs  acceptance_check.rs  acceptance_checkpoint.rs  acceptance_decide.rs  acceptance_diverge.rs  acceptance_elicit.rs  acceptance_grounded_verify.rs  acceptance_memory.rs  acceptance_otlp.rs  acceptance_research.rs  acceptance_unstick.rs  spike_brave.rs  spike_bruteforce.rs  spike_client.rs  spike_embed_latency.rs  spike_extract.rs  spike_hooks.md  spike_otlp.rs  spike_roundtrip.rs  spike_sanitizer.rs  spike_thinking.rs  spike_z3.rs
integrations/claude-code/: README.md  hooks.json
specs/001-core-layer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-core-layer/checklists/: requirements.md
specs/001-core-layer/contracts/: invocation-record.schema.json  verify.tool.json
specs/002-unstick-mode/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-unstick-mode/checklists/: requirements.md
specs/002-unstick-mode/contracts/: unstick.tool.json
specs/003-memory-layer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-memory-layer/checklists/: requirements.md
specs/003-memory-layer/contracts/: forget.tool.json  recall.tool.json  save.tool.json
specs/004-research-layer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-research-layer/checklists/: requirements.md
specs/004-research-layer/contracts/: research.tool.json
specs/005-deterministic-layer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-deterministic-layer/checklists/: requirements.md
specs/005-deterministic-layer/contracts/: check.tool.json
specs/006-checkpoint-layer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-checkpoint-layer/checklists/: requirements.md
specs/006-checkpoint-layer/contracts/: checkpoint_action.tool.json  checkpoint_batch.tool.json  checkpoint_turn.tool.json
specs/007-observability-layer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-observability-layer/checklists/: requirements.md
specs/007-observability-layer/contracts/: telemetry.md
specs/008-grounded-verify/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-grounded-verify/checklists/: requirements.md
specs/008-grounded-verify/contracts/: grounded-verify.md
specs/009-glob-locators/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-glob-locators/checklists/: requirements.md
specs/009-glob-locators/contracts/: glob-locator.md
specs/010-verification-reliability/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-grounded-compute-settle/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-diverge-perspectives/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-decide-methodology/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-preference-elicitation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-preference-enforcement/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-push-memory/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-memory-consolidation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: config.rs  error.rs  lib.rs  main.rs  observability.rs  server.rs  telemetry.rs
src/checkpoint/: contract.rs  gate.rs  mod.rs  preference.rs  review.rs  run.rs  screen.rs  trajectory.rs
src/client/: anthropic.rs  brave.rs  mod.rs  voyage.rs
src/deterministic/: arithmetic.rs  check.rs  contract.rs  mod.rs  solver.rs  translate.rs
src/grounded/: assemble.rs  mod.rs  reader.rs
src/memory/: consolidate.rs  contract.rs  mod.rs  push.rs  ranking.rs  tools.rs
src/modes/: decide.rs  diverge.rs  elicit.rs  grounded_compute.rs  grounded_verify.rs  mod.rs  unstick.rs  verify.rs
src/research/: contract.rs  extract.rs  fetch.rs  grounding.rs  mod.rs  pipeline.rs  pipeline_tests.rs  prompts.rs  settings.rs  synthesis.rs  verdict.rs
src/schema/: mod.rs  sanitize.rs  validate.rs
src/server/: record.rs
src/storage/: mod.rs  sqlite.rs
src/traits/: client.rs  clock.rs  embedder.rs  fetcher.rs  mod.rs  search.rs  source.rs  storage.rs  trajectory.rs
tests/: integration.rs
tests/fixtures/: article.html  boilerplate.html  docs.html
(+22 files in other folders)
