[package]
name = "mcp-parallax"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
authors = ["quanticsoul4772"]
description = "An LLM-augmentation MCP server: a catalog of correctives for the calling model's predictable failure modes — metacognition the model can't run on itself."
repository = "https://github.com/quanticsoul4772/mcp-parallax"
license = "MIT"
keywords = ["mcp", "reasoning", "anthropic", "claude", "ai"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "mcp_parallax"
path = "src/lib.rs"

[[bin]]
name = "mcp-parallax"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "time"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Logging — stderr only; stdout is the MCP JSON-RPC channel
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async trait boundaries
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# 1.7.0 validated by examples/spike_roundtrip.rs: Json<T> emits outputSchema +
# structured_content (T005/T006). Re-run the spike before any major bump.
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1.2.1"
jsonschema = "0.46.5"
sqlx = { version = "0.9.0", default-features = false, features = ["sqlite", "runtime-tokio"] }
uuid = { version = "1.23.3", features = ["v4"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "http2", "query", "stream"] }
futures = "0.3.32"
tokio-util = "0.7.18"
rs-trafilatura = "0.2.2"
robotstxt = "0.3.0"
z3 = { version = "0.20", features = ["bundled"] }
evalexpr = "13"

# Observability: OTLP export (007) — the 0.32 release train, pinned together
# (the ecosystem breaks API across minors; research.md 007 D1). http-proto +
# blocking reqwest is the documented pairing for the SDK's background-thread
# batch processors; rustls rides the in-tree stack; no tonic, no protoc.
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32.1", features = ["trace", "metrics"] }
# (the `reqwest-rustls-webpki-roots` feature is incompatible with reqwest
# 0.13's renamed features — S1 finding; TLS comes from the workspace-unified
# reqwest `rustls` feature instead)
opentelemetry-otlp = { version = "0.32", default-features = false, features = [
    "trace",
    "metrics",
    "http-proto",
    "reqwest-blocking-client",
    "internal-logs",
] }
opentelemetry-semantic-conventions = { version = "0.32", features = ["semconv_experimental"] }

[dev-dependencies]
# Trait mocking — the whole server tests without network or disk
mockall = "0.14"
rmcp = { version = "1.7.0", features = ["client"] }
wiremock = "0.6.5"
# Transcript fixtures for FsTrajectoryReader tests (checkpoint layer)
tempfile = "3"
# In-memory span/metric exporters for observability tests (007) — no network
opentelemetry_sdk = { version = "0.32.1", features = ["trace", "metrics", "testing"] }
# Decode OTLP protobuf payloads in the acceptance example (007 T009)
opentelemetry-proto = { version = "0.32", default-features = false, features = ["gen-tonic-messages", "trace", "metrics"] }
prost = "0.14"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
# stdout is the MCP JSON-RPC channel — a stray print corrupts the protocol.
print_stdout = "deny"
dbg_macro = "deny"

# Z3's Debug C++ build opens `.z3-trace` in the process cwd from a global
# initializer (artifact pollution for a stdio server running in the client's
# cwd) and is far slower. opt-level 3 makes cmake build Z3 as Release in
# every cargo profile — `_TRACE` is compiled out.
[profile.dev.package.z3-sys]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
strip = true
